Fix Scrollbar

--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -135,8 +135,6 @@ aside {
   .content {
     height: 552px;
     padding: 30px;
-    overflow-x: hidden;
-    overflow-y: auto;
     background-color: #e8e8e8;
     font-size: 16px;
     position: relative;
